# mbed-boilerplate

./: .gitmodules  CMakeLists.txt  README.md
firmware/: CMakeLists.txt
firmware/cmake/: UploadMethodConfig.cmake
firmware/hardware-test/: CMakeLists.txt  main.cpp
firmware/src/: main.cpp
hootl/: CMakeLists.txt  main.cpp
unit-test/: CMakeLists.txt  UnitTest.cmake
unit-test/tests/: ExampleTest.cpp
